Add server-side prepayment flow
